# moticon-opengo

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
examples/: README.md  demo_gait_report.py  demo_geometry.py  demo_text_export_grf_curves.py  demo_txt_export_events.py  demo_txt_export_grf_curves.py
src/: moticon_opengo.py
src/moticon_opengo/: gait_report.py  text_import.py  txt_export.py  utils.py
tests/: test_opengo.py
tests/testdata/: .gitignore  230927_102114.txt  230927_102137.txt  230927_102231.txt  gait_report_230927_10_21_14.xlsx  gait_report_230927_10_21_37.xlsx  gait_report_230927_10_22_31.xlsx
tests/testdata/walk_data_with_events/: text_export.txt
