[metadata]
name = moticon_opengo
version = 0.0.1
author = Moticon ReGo AG
author_email = support@moticon.com
description = Moticon OpenGo Library
long_description = file: README.md
readme = README.md
classifiers = 
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires =
    numpy

[options.packages.find]
where=src

[options.extras_require]
test = matplotlib
dev = black

# [project.urls]
# "Homepage" = "https://github.com/moticon-rego/moticon-opengo"
# "Bug Tracker" = "https://github.com/moticon-rego/moticon-opengo/issues"
